--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ torch-geometric>=2.6.1
 parse>=1.20.2
 dataclass-wizard==0.35.0
 mllam-data-prep==0.6.1
+pre-commit==3.8.0
+huggingface-hub==0.27.0
